--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -150,7 +150,7 @@ Converting from a relation to a stream can be done in several ways.  A relation 
 
 \end{description}
 
-The ``Advertisting Statistics'' example makes use of insertions streams.  After joining on \texttt{InsertionId} a stream of newly joined advertisements are produced.
+The ``Advertisting Statistics'' example makes use of insertions streams.  After joining on \texttt{InsertionId} a stream of newly joined advertisements are produced.  The data from these can then be computed on in order to product real-time statistics.
 
 \subsection{Combining Operators}
 Streams can be processed by combining the aforementioned operators.  An incoming stream may be converted to a relation using a stream-to-relation operator.  This relation might be processed through several relation-to-relation operators in order to get more useful information, and the results can be continuously output in a new stream.  Figure~\ref{operators} shows a representation of these steps.
